[!] fixed alignment of search form and "random-hint"

--- a/custom.css
+++ b/custom.css
@@ -14,6 +14,7 @@ ul {
 #hint {
     font-size: 24px;
     color: #fff;
+    margin: 0 0 0 45px;
 }
 
 #random-article {
